# usdl2

./: .gitignore  AGENTS.md  LICENSE  PUBLISHING.md  README.md  apply_cp_unix_usdl_patches.sh  circuitpython.mk  index.html  micropython.mk  modusdl2.c  patch_unix_mphal_stdin_poll.py  pyproject.toml  setup.py  test_usdl2.py  test_usdl2_cp_unix.py  usdl2.c  usdl2.h  usdl2_event.c  usdl2_module_globals.inc  usdl2_qstrdefs.h  usdl2_timers.c  usdl2_wrappers.c
.github/workflows/: deploy-pages.yml  publish-testpypi.yml
android_demo/: board_config.py  build_apk.sh  buildozer.spec  main.py  main_lvgl.py  main_usdl2_raw.py  test_desktop.sh
circuitpython_spike/: copy_manifest.txt
circuitpython_spike/shared-bindings/usdl2/: __init__.c  __init__.h
circuitpython_spike/shared-module/usdl2/: __init.c  __init__.c  __init__.h
include/: usdl2.h  usdl2_module_globals.inc  usdl2_qstrdefs.h
p4a_recipes/lvglcpython/: __init__.py
p4a_recipes/pydisplay/: __init__.py  setup.py
p4a_recipes/usdl2/: __init__.py
python/usdl2/: __init__.py  _api.py  _constants.py  _event.py  _lib.py
scripts/: ci_prepare_sdl2_android.sh  ci_prepare_sdl2_linux.sh  next_release_version.sh  publish_release_tag.sh  sdl2_dev_env.sh  stress_sdl_timer_sched.py
src/: usdl2_cpy.c  usdl2_mp.c
tools/: generate_constants.py
web/: index.html
