[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "usdl2"
dynamic = ["version"]
description = "Native CPython SDL2 subset for pydisplay (unix, windows, Android via p4a)"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.setuptools]
packages = []

[tool.setuptools.dynamic]
version = { file = "VERSION" }

# Wheel CI: one wheel per CPython minor × Linux + Windows.
# Android APKs build src/usdl2_cpy.c via p4a_recipes/usdl2/ (CompiledComponents).
[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*musllinux* *-macosx_* *-win32"
test-command = "python -c \"import usdl2; assert hasattr(usdl2, 'SDL_PumpEvents'); assert not hasattr(usdl2, '_USE_FFI')\""

[tool.cibuildwheel.linux]
archs = ["x86_64"]
manylinux-x86_64-image = "manylinux_2_28"
before-all = "yum install -y SDL2-devel || apt-get install -y libsdl2-dev || true"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
