[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "usdl2"
dynamic = ["version"]
description = "Native CPython SDL2 subset for pydisplay (unix, windows, Android)"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.setuptools]
packages = []

[tool.setuptools.dynamic]
version = { file = "VERSION" }

# Wheel CI: one wheel per CPython minor × Linux + Windows + Android.
# Android APKs install matching android_21_* wheels from TestPyPI via pydisplay_android.
[tool.cibuildwheel]
# cibuildwheel 4.x supports CPython 3.9+; Android wheels are cp313/cp314 only.
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*musllinux* *-macosx_* *-win32"
test-command = "python -c \"import usdl2; assert hasattr(usdl2, 'SDL_PumpEvents'); assert not hasattr(usdl2, '_USE_FFI')\""

[tool.cibuildwheel.linux]
archs = ["x86_64"]
manylinux-x86_64-image = "manylinux_2_28"
before-all = "yum install -y SDL2-devel || apt-get install -y libsdl2-dev || true"

[tool.cibuildwheel.windows]
archs = ["AMD64"]

# PEP 738 Android tags. Link against SDL2 prepared by scripts/ci_prepare_sdl2_android.sh;
# do not vendor libSDL2.so (p4a SDL2 bootstrap provides it at APK runtime).
[tool.cibuildwheel.android]
archs = ["arm64_v8a", "x86_64"]
environment = { ANDROID_API_LEVEL = "21", USDL2_ANDROID = "1" }
before-all = "bash scripts/ci_prepare_sdl2_android.sh"
test-command = "python -c \"import usdl2; assert hasattr(usdl2, 'SDL_PumpEvents')\""
test-skip = "*"
# Keep DT_NEEDED=libSDL2.so; p4a ships the real library in the APK.
repair-wheel-command = ""

[[tool.cibuildwheel.overrides]]
select = "*-android_*"
build-frontend = "build"
